Initial release of CV

--- a/index.html
+++ b/index.html
@@ -1,1 +1,200 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Marcus Schubert - Product Lead</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="CV of Marcus Schubert">
+    <meta name="author" content="Marcus Schubert">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/kube.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/jquery.modal.min.css" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" />
+	<link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<style>
+		.intro h1:before {
+			content: 'Marcus';
+		}
+	</style>
+</head>
+<body>
+	<!-- Navigation -->
+	<div class="main-nav">
+		<div class="container">
+			<header class="group top-nav">
+				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
+				    <span class="logo">MARCUS</span>
+				</div>
+			    <nav id="navbar-1" class="navbar item-nav">
+				    <ul>
+				        <li class="active"><a href="#about">About</a></li>
+				        <li><a href="#experiences">Experiences</a></li>
+				        <li><a href="#education">Education</a></li>
+				        <li><a href="#skills">Skills</a></li>
+				    </ul>
+				</nav>
+			</header>
+		</div>
+	</div>
+
+	<!-- Introduction -->
+	<div class="intro section" id="about">
+		<div class="container">
+			<p>Hi, I’m Marcus the Product Lead</p>
+			<div class="units-row units-split wrap">
+				<div class="unit-20">
+					<img src="img/marcus_avatar.jpg" alt="Avatar">
+				</div>
+				<div class="unit-100">
+					<h1>I'm passionate about<br><span id="typed"></span></h1>
+				</div>
+				<p>
+					<!-- Maybe add later -->
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- Work Experience -->
+	<div class="work section second" id="experiences">
+		<div class="container">
+			<h1>Work<br>Experiences</h1>
+			<ul class="work-list">
+				<li>2020-today</li>
+				<li><a href="https://www.staffbase.com" target="_blank">Product Lead@Staffbase</a></li>
+				<li>Strategic Development of a B2B SaaS Solution &amp; Leading a Team of Product Owners</li>
+			</ul>
+			<ul class="work-list">
+				<li>2018-2020</li>
+				<li><a href="https://www.staffbase.com" target="_blank">Product Owner@Staffbase</a></li>
+				<li>Ownership of Different Components like Native Apps, Analytics &amp; Media</li>
+			</ul>
+			<ul class="work-list">
+				<li>2014-2018</li>
+				<li><a href="https://www.smapone.com" target="_blank">Consultant & Product Owner@Smapone</a></li>
+				<li>Strategic Development of a B2B SaaS Mobility Solution &amp; Establishing a Support Process</li>
+			</ul>
+      <ul class="work-list">
+				<li>2013-2014</li>
+				<li><a href="https://www.t-systems-mms.com" target="_blank">Senior Project Manager & Consultant@T-Systems</a></li>
+				<li>Business Development &amp; Project Management of Mobile Solutions</li>
+			</ul>
+      <ul class="work-list">
+				<li>2011-2013</li>
+				<li><a href="https://www.t-systems-mms.com" target="_blank">Portfolio Offering Manager@T-Systems</a></li>
+				<li>Developing &amp; Anchoring Portfolio Management Division</li>
+			</ul>
+      <ul class="work-list">
+				<li>2009-2011</li>
+				<li><a href="https://www.t-systems-mms.com" target="_blank">Staff of the Executive Board@T-Systems</a></li>
+				<li>Advising the Executive Board &amp; Improvement of Management Processes</li>
+			</ul>
+      <ul class="work-list">
+				<li>2007-2009</li>
+				<li><a href="https://www.t-systems-mms.com" target="_blank">Project Manager & Consultant@T-Systems</a></li>
+				<li>Web Based Projects &amp; Business Developement</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- Education -->
+	<div class="award section second" id="education">
+		<div class="container">
+			<h1>Education &amp;<br>Training</h1>
+			<ul class="award-list list-flat">
+				<li>2004-2007</li>
+				<li>New Business Developement@T-Systems</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>2002</li>
+				<li>Software Developer@Exedio</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>2002-2007</li>
+				<li>Diploma Media Informatics@TU-Dresden</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- Skills -->
+	<div class="skills section second" id="skills">
+		<div class="container">
+			<h1>Skills &amp;<br>Interests</h1>
+			<ul class="skill-list list-flat">
+				<li>Business</li>
+				<li>Product Management / Agile Leadership / Strategy &amp; Planning</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Technology</li>
+				<li>Linux / Docker / Android</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Private</li>
+				<li>Photographing / Hiking / Family</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- Quote -->
+	<div class="quote">
+		<div class="container text-centered">
+			<h1>keep it agile</h1>
+		</div>
+	</div>
+
+	<footer>
+		<div class="container">
+			<div class="units-row">
+			    <div class="unit-50">
+			    	<p><a href="#ex1" rel="modal:open">Impressum</a></p>
+			    </div>
+			    <div class="unit-50">
+					<ul class="social list-flat right">
+						<li><a href="https://www.linkedin.com/in/marcus-schubert-354020a7/"  target="_blank"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://www.xing.com/profile/Marcus_Schubert5/cv"  target="_blank"><i class="fa fa-xing"></i></a></li>
+					</ul>
+			    </div>
+			</div>
+		</div>
+	</footer>
+
+  <!-- Impressum -->
+  <div id="ex1" class="modal">
+
+    <h1>Impressum</h1>
+
+<h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+<p>Marcus Schubert<br />
+Radeberger Stra&szlig;e 3<br />
+01465 Dresden</p>
+
+<h2>Kontakt</h2>
+<p>E-Mail: marcus.schubert82@gmail.com</p>
+
+<h3>Haftung f&uuml;r Inhalte</h3> <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach &sect;&sect; 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, &uuml;bermittelte oder gespeicherte fremde Informationen zu &uuml;berwachen oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige T&auml;tigkeit hinweisen.</p> <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung m&ouml;glich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p> <h3>Haftung f&uuml;r Links</h3> <p>Unser Angebot enth&auml;lt Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb k&ouml;nnen wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p> <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p> <h3>Urheberrecht</h3> <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielf&auml;ltigung, Bearbeitung, Verbreitung und jede Art der Verwertung au&szlig;erhalb der Grenzen des Urheberrechtes bed&uuml;rfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur f&uuml;r den privaten, nicht kommerziellen Gebrauch gestattet.</p> <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+
+<p>Quelle: <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
+
+
+
+    <a href="#" rel="modal:close">Close</a>
+  </div>
+
+	<!-- Javascript -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/typed.min.js"></script>
+  <script src="js/jquery.modal.min.js"></script>
+  <//script src="js/site.js"></script>
+    <script>
+		function newTyped(){}$(function(){$("#typed").typed({
+		// Change to edit type effect
+		strings: ["product management", "leadership", "mobility &amp; apps", "agile"],
+
+		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
+    </script>
+
+</body>
+</html>
