Updated work experience

--- a/index.html
+++ b/index.html
@@ -63,8 +63,18 @@
 		<div class="container">
 			<h1>Work<br>Experiences</h1>
 			<ul class="work-list">
-				<li>2020-today</li>
-				<li><a href="https://www.staffbase.com" target="_blank">Product Lead@Staffbase</a></li>
+				<li>2024-today</li>
+				<li><a href="https://www.staffbase.com" target="_blank">Group Product Manager@Staffbase</a></li>
+				<li>Strategic Development of a B2B SaaS Solution &amp; Leading a Team of Product Managers</li>
+			</ul>
+			<ul class="work-list">
+				<li>2022-2024</li>
+				<li><a href="https://www.staffbase.com" target="_blank">Group Product Operations Manager@Staffbase</a></li>
+				<li>Optimizing Product Processes and Setting up the Product Organization for Success</li>
+			</ul>
+			<ul class="work-list">
+				<li>2020-2022</li>
+				<li><a href="https://www.staffbase.com" target="_blank">Product Lead / Group Product Manager@Staffbase</a></li>
 				<li>Strategic Development of a B2B SaaS Solution &amp; Leading a Team of Product Owners</li>
 			</ul>
 			<ul class="work-list">
